Resolve #28 - Coloca um z-index no rodapé para ele ficar acima do canvas

--- a/app/modules/interface/_interface.scss
+++ b/app/modules/interface/_interface.scss
@@ -97,6 +97,7 @@ body {
     right: 0;
     margin: auto;
 	padding: 3px 3px 7px;
+	z-index: 200;
 }
 
 .canvas-box{
